<resources>
    <string name="app_name">亲亿家</string>
    <string name="nav_sell">出库</string>
    <string name="nav_stock">入库</string>
    <string name="nav_statistics">统计</string>

    <string name="btn_query">查询</string>
    <string name="text_lr">利润</string>
    <string name="hint_sell_query">手机号码或用户名查询</string>
    <string name="text_rmb_sign">￥</string>
    <string name="text_split_point">.</string>
    <string name="gesture_label_setting">设置手势密码</string>
    <string name="gesture_label_comfirm">确认手势密码</string>
    <string name="gesture_label_len">至少连接4个点，请重新绘制</string>
    <string name="gesture_label_comfirm_wrong">与上一次绘制不一致，请重新绘制</string>
    <string name="gesture_label_reset">重新设置手势密码</string>
    <string name="gesture_label_suc">手势密码设置成功</string>
    <string name="gesture_label_entry_pwd">请输入手势密码</string>
    <string name="gesture_label_entry_times">密码错误，还可输入%d次</string>
    <string name="gesture_label_forget">忘记手势密码？</string>
    <string name="gesture_label_use_account">使用账号密码登录</string>

    <string name="login_label_username">用户名：</string>
    <string name="login_label_password">密码：</string>
    <string name="login_label_verify_code">验证码：</string>
    <string name="login_botton_login">登录</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_last_time">最后更新时间：</string>
    <string name="listview_loading">加载中...</string>
    <string name="loading_done">正在加载</string>
    <string name="nomore_loading">没有更多了</string>
    <string name="refresh_done">正在刷新</string>
    <string name="refreshing">正在刷新...</string>

    <string name="sell_tab_order">销售单信息</string>
    <string name="sell_tab_product">销售产品信息</string>

</resources>
