<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_gesture_verify"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--标题-->
    <TextView
            android:id="@+id/activity_gesture_verify_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gesture_label_entry_pwd"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
    />

    <!--提示信息-->
    <TextView
            android:id="@+id/activity_gesture_verify_tv_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/app_color_theme_1"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_gesture_verify_tv_title"
    />

    <!--手势标志-->
    <com.qyjstore.qyjstoreapp.view.GestureContentView
            android:id="@+id/activity_gesture_verify_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_gesture_verify_tv_tip"
            app:layout_constraintBottom_toTopOf="@+id/activity_gesture_verify_tv_forget"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <!--忘记手势密码-->
    <TextView
            android:id="@+id/activity_gesture_verify_tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gesture_label_forget"
            android:textColor="@color/mtrl_scrim_color"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <!--使用账号密码登录-->
    <TextView
            android:id="@+id/activity_gesture_verify_tv_use_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gesture_label_use_account"
            android:textColor="@color/mtrl_scrim_color"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

</android.support.constraint.ConstraintLayout>