<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="#f6f6f6">

    <TextView
            android:id="@+id/activity_login_tv_username"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_label_username"
            android:gravity="end"
            android:labelFor="@+id/activity_login_et_username"
            app:layout_constraintRight_toLeftOf="@+id/activity_login_et_username"
            app:layout_constraintTop_toTopOf="@+id/activity_login_et_username"
            app:layout_constraintBottom_toBottomOf="@+id/activity_login_et_username"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
    />
    <EditText
            android:id="@+id/activity_login_et_username"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:inputType="text"
            android:background="@drawable/bg_edittext"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintLeft_toRightOf="@+id/activity_login_tv_username"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
    />

    <TextView
            android:id="@+id/activity_login_tv_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_label_password"
            android:gravity="end"
            android:labelFor="@+id/activity_login_et_password"
            app:layout_constraintRight_toLeftOf="@+id/activity_login_et_password"
            app:layout_constraintTop_toTopOf="@+id/activity_login_et_password"
            app:layout_constraintBottom_toBottomOf="@+id/activity_login_et_password"
    />
    <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_login_et_username"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_et_username"
            android:inputType="textPassword"
    />

    <TextView
            android:id="@+id/activity_login_tv_verify_code"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_label_verify_code"
            android:gravity="end"
            android:labelFor="@+id/activity_login_et_verify_code"
            app:layout_constraintRight_toLeftOf="@+id/activity_login_et_verify_code"
            app:layout_constraintTop_toTopOf="@+id/activity_login_et_verify_code"
            app:layout_constraintBottom_toBottomOf="@+id/activity_login_et_verify_code"
    />
    <EditText
            android:id="@+id/activity_login_et_verify_code"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_login_et_password"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_et_password"
            android:inputType="text"
    />

    <Button
            android:id="@+id/activity_login_bt_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_botton_login"
            android:layout_marginTop="30dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintLeft_toLeftOf="@+id/activity_login_tv_verify_code"
            app:layout_constraintRight_toRightOf="@+id/activity_login_et_verify_code"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_et_verify_code"
    />


</android.support.constraint.ConstraintLayout>